Closed Bug 694915 Opened 13 years ago Closed 13 years ago

crash nsNntpService::MessageURIToMsgHdr (from 8.0 or later)

Categories

(MailNews Core :: Networking: NNTP, defect)

x86
Windows Vista
defect
Not set
critical

Tracking

(thunderbird8+ fixed, thunderbird9 fixed)

RESOLVED FIXED
Thunderbird 10.0
Tracking Status
thunderbird8 + fixed
thunderbird9 --- fixed

People

(Reporter: m_kato, Assigned: Bienvenu)

References

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This is a regression by Bug 226890. The following check in is on 8.0 or later. changeset: 8057:cd466d24ba2f user: Joshua Cranmer <Pidgeot18@gmail.com> date: Thu Dec 30 22:19:46 2010 -0500 summary: Bug 226890 - Thunderbird doesn't handle news URIs properly, part 6: Move the message key to nsNntpUrl as well. r=Standard8, sr=bienvenu nsNntpUrl::GetFolder should not return NS_OK if aFolder sets null. This bug was filed from the Socorro interface and is report bp-8e37128c-f6e5-4e42-8fda-0fba92111014 . ============================================================= 0 xul.dll nsNntpService::MessageURIToMsgHdr mailnews/news/src/nsNntpService.cpp:1752 1 xul.dll nsNntpUrl::GetMessageHeader mailnews/news/src/nsNntpUrl.cpp:416 2 xul.dll NS_InvokeByIndex_P xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp:102 3 xul.dll XPCWrappedNative::CallMethod js/src/xpconnect/src/xpcwrappednative.cpp:2337 4 xul.dll XPC_WN_GetterSetter js/src/xpconnect/src/xpcwrappednativejsops.cpp:1649 5 mozjs.dll js::Invoke js/src/jsinterp.cpp:657 6 mozjs.dll js::ExternalInvoke js/src/jsinterp.cpp:809 7 mozjs.dll js::ExternalGetOrSet js/src/jsinterp.cpp:849 8 mozjs.dll js::Shape::get js/src/jsscopeinlines.h:270 9 mozjs.dll js_GetPropertyHelper js/src/jsobj.cpp:5355 10 mozjs.dll js::Interpret js/src/jsinterp.cpp:3530 11 mozjs.dll js::RunScript js/src/jsinterp.cpp:614 12 mozjs.dll js::Invoke js/src/jsinterp.cpp:687 13 mozjs.dll js::ExternalInvoke js/src/jsinterp.cpp:809 14 mozjs.dll JS_CallFunctionValue js/src/jsapi.cpp:5043
Component: General → Networking: NNTP
Product: Thunderbird → MailNews Core
QA Contact: general → networking.nntp
Keywords: regression
Whiteboard: regression
Joshua, can you take a look at this please?
Assignee: nobody → Pidgeot18
Assignee: Pidgeot18 → dbienvenu
Attached patch proposed fixSplinter Review
nsNntpUrl::GetFolder returns a null pointer w/o an error when there is no folder - some urls don't have a folder associated with them, so this wasn't considered an error. Other url types behave the same way, even though it does violate the xpcom rules, but fix that is not something we'd want to change right before we ship.
Attachment #571032 - Flags: review?(mbanner)
Attachment #571032 - Flags: review?(mbanner) → review+
Attachment #571032 - Flags: approval-comm-beta+
Attachment #571032 - Flags: approval-comm-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: