Bug 694915 - crash nsNntpService::MessageURIToMsgHdr. r=Standard8